[package]
name = "mdif"
version = "0.1.12"
edition = "2021"
description = "written in rust, terminal-based disk usage analyzer."
license = "MIT"
repository = "https://github.com/temidaradev/mdif"
keywords = ["disk", "usage", "analyzer", "cli", "visualization"]
categories = ["command-line-utilities", "filesystem"]
readme = "README.md"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
colored = "3.1.1"
filesize = "0.2.0"
indicatif = "0.18.3"
jwalk = "0.8.1"
libc = "0.2.179"
